# steelpy

./: .gitignore  README.md  pyproject.toml  requirements.txt
steelpy/: README.md  __init__.py  steelpy.py
steelpy/shape files/: C_shapes.csv  C_shapes.xlsx  DBL_L_shapes.csv  DBL_L_shapes.xlsx  HP_shapes.csv  HP_shapes.xlsx  HSS_R_shapes.csv  HSS_R_shapes.xlsx  HSS_shapes.csv  HSS_shapes.xlsx  L_shapes.csv  L_shapes.xlsx  MC_shapes.csv  MC_shapes.xlsx  MT_shapes.csv  MT_shapes.xlsx  M_shapes.csv  M_shapes.xlsx  PIPE_shapes.csv  PIPE_shapes.xlsx  ST_shapes.csv  ST_shapes.xlsx  S_shapes.csv  S_shapes.xlsx  WT_shapes.csv  WT_shapes.xlsx  W_shapes.csv  W_shapes.xlsx
