[tool.poetry]
name = "steelpy"
version = "1.0.3"
description = "A simple library for section properties of AISC steel shapes"
authors = ["evanfaler <emfaler@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
keywords = ["steel","AISC", "engineering", "shapes_AISC", "AISC Shapes Database v16.0"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
